--- a/barometre-esr.Rmd
+++ b/barometre-esr.Rmd
@@ -148,7 +148,7 @@ Le baromètre a été ouvert de juin à décembre 2024, en vue de limiter un eff
 
 _Nombre de réponses_ : `r nrow(results)` répondants ont rempli au moins la première partie, et `r nrow(results %>% filter(!is.na(submitdate)))` ont finalisé leur réponse. 
 
-## Principaux résultats : Opinion sur leurs conditions de travail
+## Principaux résultats : Opinion sur les conditions de travail
 
 
 :::::: {.cols data-latex=""}
@@ -195,7 +195,7 @@ __10% des opinions des répondants sont optimistes sur l'amélioration future de
 ::::::
 
 
-## Principaux résultats : Sentiment de soutien de la part des principales instances
+## Principaux résultats : Sentiment de soutien et questions socles
 
 
 :::::: {.cols data-latex=""}
@@ -209,6 +209,21 @@ plot_bloc_percent("confiance")
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
 __21% des opinions des répondants témoignent d'un sentiment de soutien de la part des instances, contre 65% qui en rapportent une absence.__ Sont perçus comme les plus soutenants les directions de composante (61% de soutien / 27% de non-soutien), les instances paritaires locales (39%/42%) et le CNU (35%/49%). Les répondant ne sentent pratiquement aucun soutien de la part de l'Etat et du MESRI (tous les deux avec 5%/91%), pas plus que de l'ANR (9%/79%) et du HCéres (11%/77%). Les ONR sont mieux perçues (23%/59%) que France Unversités (9%/77%), l'AUREF (5%/81%) et UDice (5%/82%). 66% des répondants déclarent ne pas connaitre l'AUREF, 47% UDice et 38% France Universités.
+:::
+::::::
+
+:::::: {.cols data-latex=""}
+::: {.col data-latex="{0.3\textwidth}"}
+```{r, echo=FALSE, out.width="100%", fig.width=4.5,fig.height=4.5}
+plot_bloc_percent("socle")
+```
+:::
+::: {.col data-latex="{0.0\textwidth}"}
+\ 
+:::
+::: {.col data-latex="{0.7\textwidth}"}
+__58% des réponses aux questions socles sont positives, contre 27% qui sont négatives.__ 
+76% des répondants s'estiment plus heureux que les gens qui vivent en France d'une manière générale, et 66% estiment que leur vie est satisfaisante. 75% estiment que ce qu'ils font dans leur vie à du sens et de la valeur, mais seulement 30% estiment que leur métier est valorisé (contre 59% qui estiment le contraire). 49% s'estiment capable de faire le même travail jusqu'à la retraite (contre 37% qui s'en sentent plutôt incapable), et 54% souhaitent faire le même travail jusqu'à leur retraite (contre 37% qui ne le souhaitent pas).
 :::
 ::::::
 
@@ -259,7 +274,7 @@ __17% des opinions des répondants témoignent d'un effort suffisant de leur ins
 ::::::
 
 
-```{r end, eval=TRUE}
+```{r end, eval=FALSE}
 knitr::knit_exit()
 ```
 
@@ -311,14 +326,6 @@ cowplot::plot_grid(ncol=2, rel_widths = c(1,1),
 ```
 
 
-## Questions socles
-
-« Pour chacune des questions suivantes, situez-vous sur une échelle de 0 à 10. »
-
-```{r socle}
-plot_bloc("socle",socle.factor)
-```
-
 # Détail des réponses par question
 
 ## Détail : Conditions de travail
@@ -352,6 +359,15 @@ plot_bloc("optimisme",conditions.factor)
 ```{r confiance, fig.width=12}
 plot_bloc_grid("confiance",confiance.factor)
 ```
+
+## Questions socles
+
+« Pour chacune des questions suivantes, situez-vous sur une échelle de 0 à 10. »
+
+```{r socle}
+plot_bloc("socle",socle.factor)
+```
+
 
 ## Détail : Inquiétude face aux crises
 
@@ -431,7 +447,7 @@ plot_pops("sexe.grp")
 
 \scriptsize
 Le groupe de réponses « Autre » présente trop peu de réponses (`r nb_repondants("sexe","Autre")`) pour être représentatif : il n'est pas représenté ici. \newline
-Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 6. Un écart de 0.1 est donc très faible.
+Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 10. Un écart de 0.2 est donc faible.
 
 
 ## Résultat par caractéristiques : Métier
@@ -441,8 +457,8 @@ plot_pops("metier.grp","Set1")
 ```
 
 \scriptsize
-Pour des questions de lisibilité et de représentativité, les groupes détaillés de métiers supports ont été fusionnés en un seul groupe. \newline
-Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 6. Un écart de 0.5 est donc assez significatif.
+Pour des questions de lisibilité et de représentativité, les groupes détaillés de métiers ont été fusionnés en trois groupes. \newline
+Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 10. Un écart de 1 est donc significatif.
 
 
 ## Résultat par caractéristiques : Discipline
@@ -452,7 +468,7 @@ plot_pops("discipline.grp","Pastel2")
 ```
 
 \scriptsize
-Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 6. Un écart de 0.2 est donc faible.
+Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 10. Un écart de 0.5 est donc assez significatif.
 
  
 
@@ -464,18 +480,18 @@ plot_pops("statut.grp","Accent")
 
 \scriptsize
 Pour des questions de lisibilité et de représentativité, les groupes détaillés de contractuels ont été fusionnés en un seul groupe. \newline
-Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 6. Un écart de 0.2 est donc faible.
+Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 10. Un écart de 0.8 est donc significatif.
 
 
 ## Résultat par caractéristiques : Corps
 
 ```{r categorie, fig.width=12}
-plot_pops("categorie.grp","Dark2")
+plot_pops("categorie.grp","Dark2",90)
 ```
 
 \scriptsize
 Les réponses des BIATSS catégories B et C sont trop peu nombreuses pour être représentatives, malheureusement. C'est pourquoi cette représentation se limite aux personnels d'enseignement et de recherche. \newline
-Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 6. Un écart de 0.8 est donc significatif.
+Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 10. Un écart de 1.5 est donc très significatif.
 
 
 ## Résultat par caractéristiques : Responsabilités
@@ -486,7 +502,7 @@ plot_pops("responsabilites.grp","Oranges",90)
 
 \scriptsize
 Pour des questions de lisibilité et de représentativité, les groupes détaillés de responsabilité ont été fusionnés en quatre groupes. \newline
-Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 6. Un écart de 0.4 est donc assez significatif.
+Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 10. Un écart de 0.5 est donc assez significatif.
 
 ## Résultat par caractéristiques : Ancienneté
 
@@ -496,14 +512,136 @@ plot_pops("anciennete.grp","PRGn",90)
 
 \scriptsize
 Pour des questions de lisibilité et de représentativité, les groupes détaillés d'ancienneté ont été fusionnés en quatre groupes. \newline
-Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 6. Un écart de 0.4 est donc assez significatif.
+Le score de chaque groupe est calculé comme la moyenne des réponses, en valeurs numériques de 0 à 10. Un écart de 1 est donc significatif.
 
 
-# Expressions libres
+# Expressions libres 
+
+## Expressions libres, face aux crises (I)
+
+103 commentaires ont été laissés par les répondants à la question « Si vous le souhaitez, vous pouvez préciser vos réponses. » après les questions sur les crises climatique, économique, politique et diplômatique. Ils sont analysés dans la suite.
+
+\footnotesize
+
+__Aucun commentaire ne remet en cause la réalité d'aucune crise__. Néanmoins, beaucoup discutent de leur définition et des termes à employer :
+
+- ___« Il n’y a pas que la crise climatique : c’est une crise bien plus vaste, écologique. ».___  Beaucoup de commentaires précisent la notion de crise écologique, et regrettent sa réduction à l'enjeu climatique.
+- ___« La crise économique est une crise politique ».___ Concernant la crise économique, plusieurs commentaires estiment qu'elle est instrumentalisée, voire créée, politiquement pour imposer des transformations et _« justifier le désengagement financier de l’Etat des divers services publics »._
+
+Concernant les efforts fournis par les établissements, les commentaires se partagent en trois ensembles :
+
+- ___« Mon établissement brasse beaucoup d’air ».___ Un premier ensemble regrette le _« greenwashing »_, estimant que les institutions se concentrent sur la forme au détriment du fond. 
+
+- ___« Mon institution n’a pas les leviers ».___ Un deuxième ensemble estime que les institutions n'ont pas les moyens pour agir face aux crises, notamment les moyens financiers et politiques. _« Avec le budget contraint qui leur est alloué ils font ce qu’ils peuvent »_
+
+- ___« L’institution n’a pas à se mêler de politique ».___ Enfin, un troisième ensemble estime que les crises ne sont pas du ressort des institutions de l'ESR, en particulier les crises économique, diplomatique et politique.
+
+___« Il serait d’une grande niaiserie de croire que mon université peut quelque chose au regard de l’ampleur de ces crises ».___ Globalement, le sentiment qui domine est l'impuissance face aux crises, autant des institutions que des individus. _« Il faut une lutte systémique »_, mais les institutions de l'ESR _« n’ont pas vraiment de poids politique pour infléchir quoi que ce soit au niveau national »_.
+
+## Expressions libres, face aux crises (II)
+
+\footnotesize
+
+___« La prise en compte de la crise climatique par nos instances est à un niveau indigne de la culture scientifique ».___ Quelques commentaires soulignent la déconnexion entre les compétences de l'ESR et son action, et parfois un conflit entre les impératifs écologiques et le fonctionnement de la recherche _« Les chercheurs continuent à sillonner la planète en avion et à organiser des missions en bateau »_, mais aussi beaucoup l'état du bâtit _« les locaux ne sont pas adaptés »_.
+
+___« La réunionnite nous a bouffé et nos tutelles n'ont aucune vision, juste des peurs »___. De nombreux commentaires pointent le défaut d'ambition et de pilotage pour mettre en œuvre de véritables politiques _« Les ONR obéissent aux girouettes gouvernementales au lieu de s’en affranchir », mais également pour se positionner dans les débats publics, notamment en ce qui concerne les crises politiques et diplomatiques « la frilosité voire la paranoïa de l’institution est très notable »_.
+
+___« On va droit dans le mur, à tous les niveaux, il faut changer les choses en profondeur et MAINTENANT ».___ Des commentaires montrent une grande inquiétude et un sentiment d'urgence et de déclin _« nous allons de décrépititute en déchéance, de déchéance en décadence »_.
+
+___« Mon enseignement (architecture) doit faire avec, et enseigner, avec un futur très incertain et très impacté par le changement climatique, les crises économiques et politiques... Ce ne sont pas que les conditions de travail qui sont incertaines (et pas optimistes), mais aussi le contenu de l’enseignement et de la recherche ».___ Enfin, un seul commentaire rapporte que les crises impactent directement le contenu et les méthodes d'enseignement.
+
 
 ## Expressions libres : quelques choses ajoutées aux réponses (I)
 
-X commentaires ont été laissés par les répondants à la question « Avez-vous quelque chose à ajouter aux réponses que vous avez fournies ? ». Ils sont analysés dans la suite.
+103 commentaires ont été laissés par les répondants à la question « Avez-vous quelque chose à ajouter aux réponses que vous avez fournies ? ». Ils sont analysés dans la suite.
+
+\footnotesize
+
+___« La souffrance au travail est visible dans tous les services à tous les échelons ».___ La très grande majorité des commentaires pointent des conditions de travail dégradées et un pessimisme durablement installé. Les deux raisons principalement pointées sont identiques à celle du baromètre précédent :
+
+- ___« les tâches administratives ont explosé en nombre et en complexité ».___ Le poids des tâches administratives revient le plus fréquement : _« j’ai l’impression que je suis payé à remplir des tableau excel et à écrire des mails »_. Pour beaucoup de répondants _« la bureaucratie est trop lourde »_ et il faudrait  _«  arrêter de complexifier le millefeuille administratif… »._
+
+- ___« Les universités sont paralysées par le manque de moyens »___. La pénurie de moyens humains et financiers est récurente dans les commentaires : _« Je n’ai ni ordinateur ni imprimante en état de fonctionner »_, _«le manque de possibilité de recrutement de titulaires nous transforme en gestionnaire DRH »_. Elle est parfois attribuée à la _«  privatisation galopante de l’enseignement supérieur, et également de la recherche »_ ou à _« une politique “darwinienne” de mise en compétition généralisée »_.
+
+___« On nous empêche de fonctionner et ensuite on nous reproche de dysfonctionner »___. Il ressort une impression d'entrave, due à _« une pure logique financière »_ générant désormais trop de dysfonctionnements et un sentiment d'abandon : _« Un soutien du ministère plutôt que des accusations de wokisme serait bienvenu également »_.
+
+___« Sensation que notre métier dans l’ESR n’a plus de sens, d’ailleurs que ni la recherche, ni l’enseignement, ni même l’université n’ont de sens »___ La perte de sens est une des conséquences principales notée dans les commentaires, _« Je ne veux pas “être rentable”, je veux être utile »_, parfois jusqu'à la colère : « _« Sa dégradation me remplit de tristesse, de honte, de colère et je ne me reconnais plus dans cet environnement »_, _« C’est tout à fait déprimant, révoltant »_.
+
+___« Ce n’est pas la fonction publique pour laquelle j’ai signée. »___ Plusieurs commentaires rapportent un doute sur la conduite à suivre, et envisage explicitement un _exit_ : _« Je crois en mon métier mais n’ai plus aucune illusion  »_, _« No Future »_, _« je cherche à me reconvertir dans un autre secteur »_, _« J’espère juste réussir à trouver une porte de sortie »_, _« Faut-il continuer d’œuvrer pour une utopie ou bien sauver sa peau et aller faire autre chose ?_ »
+
+## Expressions libres : quelques choses ajoutées aux réponses (II)
+
+\footnotesize
+
+___« Le maître-mot est désormais l’individualisme ».___ L'impact sur les relations professionnelles est souvent souligné : _« les tensions montent »_, _« la vie est de plus en plus triste, notamment professionnelle »_. Ce sentiment va même dans plusieurs commentaires jusqu'à une forme de déshumanisation _« il n’y a plus aucune considération humaine »_. Le télétravail, qui s'est développé depuis le Covid, est pointé une fois comme source de dégradation : _«c’est une catastrophe pour le travail en équipe._».
+
+___« J’ai indiqué un meilleur équilibre entre vie pro et perso, ayant décidé depuis 6 mois de ralentir et d’alléger ma charge de travail, pour éviter les burn outs qui ont touché la plupart de mes collègues… »___. Quelques commentaires font état d'une forme de _quiet-quitting_, dont l'ampleur reste à mesurer : « Le peu de soutien de notre Université n’a fait que rajouter à notre volonté de désengagament massif »
+
+___« Le problème de l’ESR aujourd’hui est la maltraitance que subissent les précaires avec un manque parfois de solidarité ».___ Contrairement à l'an dernier, beaucoup de commentaires s'intéressent à la situation des précaires de l'ESR.
+
+- ___« je suis payée à peine au-dessus du SMIC, je ne trouve que des CDD, je ne peux pas me stabiliser comme mes ami.es qui sont souvent moins qualifié.es que moi. »___ Plusieurs commentaires rapportent des situations de précarité financières et statutaires ayant des impacts lourds sur les conditions de travail et de vie des précaires de l'ESR, pourtant les plus qualifiés de la nation : _« La difficulté de se projeter dans l’avenir lorsqu’on est en post doctorat pèse beaucoup sur la qualité de vie quotidienne »_
+
+
+- ___« fonctionnement boiteux, des projets ANR sur 5 ans, des CDD ».___ Les modes de financement et de recrutement sont presque systématiquement mis en cause,   « 42h de vacations de l’année précédentes toujours impayees »
+
+
+- ___« Je suis sollicitée sans arrêt pour des vacations ou du travail de recherche gratuit (comité de lecture de revues, co-écritures de papiers, communication, etc.) »___. Un sentiment d'injustice se dégage de l'écart entre la précarité des embauches et la pérénité des missions.
+
+
+- ___« Je trouve compliqués les rapports de pouvoir qui s’exercent sans le dire »___ De nombreux commentaires regrettent le renforcement des hiérarchies, parfois perçu comme un  _« management autoritaire et brutal »_. Le directions ne sont pas perçues comme des alliées : _« Les directions d’instances ONR ou autres agences sont devenues des relais verticaux des injonctions ministérielles vers le bas »_.
+
+___« En tant que 384h, notre exclusion du RIPEC (ou non mise en place d’un dispositif analogue) à été délétère ».___ Plusieurs commentaires proviennent d'enseignants de statut second degré, qui perçoive leur situation comme injuste : ___« En tant que PRAG après 20 ans, ma carrière est maintenant face à un mur ».___
+
+
+Deux commentaires ont une tonalité positive :
+- ___« Heureusement, le lien avec les étudiants, entre (certains) collègues, le travail en équipe permet encore de tenir ! »___
+- ___« Je suis actuellement en post-doctorat en Belgique, où les conditions de travail et de rémunération sont bien plus satisfaisantes, ce qui explique mes réponses plutôt positives, et le regard plus serein que je porte sur mon métier et ses perspectives »___. 
+
+Précaires : « Je suis choquée de la pure façade des mécanismes de soutien. »
+
+
+
+## Expressions libres : Observations sur le baromètre. 
+
+103 réponses ont été laissées à la question « Avez-vous des observations sur le baromètre lui-même ? ». 
+
+\footnotesize
+
+Trois types de réaction face au baromètre reviennent plus fréquemment :
+
+- ___« En faisant le bilan objectif sur l’état de mon travail je me rend compte que cet état est encore pire que ce que je croyais. Cela me déprime un peu. ».___ Quelques commentaire font état d'un impact négatif du baromètre sur leur moral. Nous sommes conscients de ce problème incontournable et en sommes sincèrement navrés.
+- ___« Sentiment de remplir un truc qui ne sert à rien ».___ Plusieurs commentaires expriment un sentiment de futilité face au baromètre, plus rarement sous forme de reproche _« Personne ne prend ses responsabilités. Personne n’a d’ambition. L’ESR est en train de mourir et vous faites des questionnaires. »_
+- ___« Esperons qu’il sera utilisé ».___ Un plus grand nombre de commentaires témoignent d'un espoir, le plus souvent modéré voire de principe, que le baromètre soit utilisé dans les prises de décision des établissements.
+
+A cela s'ajoute des commentaires plus spécifiques :
+
+- ___« C’est un QCM. J’ai peur que les résultats ne soient ni fins, ni explicatifs ».___ 
+Plusieurs commentaires estiment que les questions ne vont pas assez loin, manquent d'aspect qualitatifs ou au contraire quantitiatifs, et ignorent . _« Aucune question sur les questions de vss ?? »_.
+
+Le baromètre est effectivement conçu comme un sondage pour être le plus court et le plus général possible afin de pouvoir être maintenu dans le temps et percevoir des évolutions. C'est frustrant, mais il n'a pas l'ambition de se substituer aux enquêtes plus longues, plus détaillées, ou plus focalisées comme il en existe par exemple sur les VSS.
+
+- ___« Pensez aux BIATSS et Vacataires dans la conception de votre questionnaire, il y a des choses à y creuser ».___ Quelques commentaires regrettent le manque de questions spécifiques à certaines situations professionnelles, notamment BIATSS, vacataires et ESAS.
+
+Les questions ont été conçues et relues par une équipe composées de personnels de toutes catégories, y compris des vacatatairs et personnels BIATSS. Malgré tous nos efforts, il semble impossible d'avoir une enquête parfaitement adaptée à tout le monde.
+
+
+- ___« la question “faites-vous confiance aux gens que vous ne connaissez-pas” me paraît hors-sujet, voire infantilisante ».___ Plusieurs commentaires reviennent sur cette question, ne comprennant pas son utilité.
+
+C'est effectivement une question « socle », c'est-à-dire hors-sujet mais standard pour des enquêtes de ce type. Elle permet des comparaisons avec la population générale.
+
+- ___« Les questions sur les différentes “crises” sont trop vagues et inconsistantes ».___
+
+Le sujet était délicat et vaste à aborder, notamment parce que l'actualité a été très intense pendant la période d'ouverte du baromètre. A défaut de pouvoir demander plus de temps aux répondants, nous avons fait le choix d'être le plus général possible. L'utilisation de « climatique » au lieu de « écologique » était sans doute une erreur. 
+
+- ___« vous sentez vous obligé d’assumer des tâches qui ne font pas partie de votre poste pour que votre établissement continue à fonctionner et à représenter vos valeurs ? ».___ Un commentaire propose d'ajouter une question sur les tâches acceptées par dépit. 
+
+Cette question touche à la question du _quiet-quitting_, qui sera étudiée comme possible thème du prochain baromètre.
+
+
+___« Aurez-vous le courage de publier certains propos qui ne vont pas dans le sens de la doxa wokiste bien-pensante ? Toutes les formations ne se valent pas, quoiqu’on veuille nous faire croire. »___ Un commentaire exprime une crainte de censure « wokiste » dans le compte rendu du baromètre. 
+
+Les risques paraissent faibles, les questions de l'offre de formation et des mouvements idéologiques n'étant pas abordées dans le baromètre.
+
 
 \footnotesize
 
@@ -518,7 +656,6 @@ knitr::include_graphics("files/589px-Knowledge-Reid-Highsmith.png")
 \scriptsize
 
 \hfill Enquête dirigée par Julien Gossa \newline
-\hphantom{.} \hfill Analyse OpenAI effectuée par Jacques Haiech \newline
 \hphantom{.} \hfill Contact : contact@cpesr.fr
 
 
