--- a/barometre-esr.Rmd
+++ b/barometre-esr.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Baromètre de l'ESR 2023"
+title: "Baromètre de l'ESR 2024"
 author: |
   | CPESR
   | [www.cpesr.fr](https://cpesr.fr)
@@ -161,7 +161,7 @@ plot_bloc_percent("conditions")
 \ 
 :::
 ::: {.col data-latex="{0.70\textwidth}"}
-__43% des opinions des répondants sur leurs conditions de travail sont positives, contre 43% négatives.__ Sont les mieux perçues les relations professionnelles avec le même corps de métier (67% d'opinions positives), les relations professionnelle avec les autres corps de métier (60% d'opinions positives) et les conditions de vie en général (50% d'opinions positives). Sont les plus mal perçues les conditions d'évolution de carrière (56% d'opinions négatives, les conditions de rémunérations (55%) et les conditions de travail relatives à l'administration (67% d'opinions négatives).
+__43% des opinions des répondants sur leurs conditions de travail sont positives, contre 43% négatives.__ Sont les mieux perçues les relations professionnelles avec le même corps de métier (67% d'opinions positives), les relations professionnelle avec les autres corps de métier (60%) et les conditions de vie en général (50%). Sont les plus mal perçues les conditions d'évolution de carrière (56% d'opinions négatives), les conditions de rémunérations (55%) et les conditions de travail relatives à l'administration (67% d'opinions négatives).
 :::
 ::::::
 
@@ -223,7 +223,7 @@ plot_bloc_percent("socle")
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
 __58% des réponses aux questions socles sont positives, contre 27% qui sont négatives.__ 
-76% des répondants s'estiment plus heureux que les gens qui vivent en France d'une manière générale, et 66% estiment que leur vie est satisfaisante. 75% estiment que ce qu'ils font dans leur vie à du sens et de la valeur, !mais seulement 30% estiment que leur métier est valorisé (contre 59% qui estiment le contraire). 49% s'estiment capable de faire le même travail jusqu'à la retraite (contre 37% qui s'en sentent plutôt incapable), et 54% souhaitent faire le même travail jusqu'à leur retraite (contre 37% qui ne le souhaitent pas).
+76% des répondants s'estiment plus heureux que les gens qui vivent en France d'une manière générale, et 66% estiment que leur vie est satisfaisante. 75% estiment que ce qu'ils font dans leur vie à du sens et de la valeur, mais seulement 30% estiment que leur métier est valorisé (contre 59% qui estiment le contraire). 49% s'estiment capable de faire le même travail jusqu'à la retraite (contre 37% qui s'en sentent plutôt incapable), et 54% souhaitent faire le même travail jusqu'à leur retraite (contre 37% qui ne le souhaitent pas).
 :::
 ::::::
 
@@ -660,15 +660,22 @@ Les risques paraissent faibles, les questions de l'offre de formation et des mou
 
 \vfill
 
-\normalsize
-
-La CPESR remercie chaleureusement les participantes et participants à ce baromètre.
-
-\vfill
 
 ```{r, out.width="7%", fig.align='center'}
 knitr::include_graphics("files/589px-Knowledge-Reid-Highsmith.png")
 ``` 
+
+
+\normalsize
+
+La CPESR remercie chaleureusement les participantes et participants à ce baromètre.
+
+Elle remercie également les relectrices et relecteurs, de tous statuts, qui ont permis de corriger et d'améliorer ce compte rendu.
+
+Elle remercie plus spécialement Mathieu Perona et Célia Bouchet pour leur aide précieuse dans l'amélioration de ce baromètre.
+
+\vfill
+
 
 \scriptsize
 
